# seetle-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  test_backends.sh
docs/: keyring.md  mock.md  nordic.md  secure_env.md  tpm.md  tropic.md  xhd.md
libtropic_build/: CMakeLists.txt  seelte_wrapper.c
src/: config.rs  init.rs  lib.rs  main.rs  tui.rs
src/backends/: keyring.rs  mock.rs  mod.rs  nordic.rs  secure_env.rs  tpm.rs  tropic.rs  xhd.rs
src/file/: mod.rs  storage.rs
src/keyring/: README.md  backend.rs  mod.rs  storage.rs
src/memory/: mod.rs  storage.rs
src/mock/: README.md  backend.rs  mod.rs
src/nordic/: README.md  backend.rs  mod.rs
src/secure_env/: README.md  backend.rs  mod.rs  storage.rs
src/storage/: keyring.rs  memory.rs  mod.rs  secure_env.rs  tpm.rs
src/tpm/: README.md  backend.rs  mod.rs  storage.rs
src/tropic/: README.md  backend.rs  mod.rs
src/xhd/: README.md  backend.rs  mod.rs
